--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstra</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,13 +52,21 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://www.autohebdo.fr/app/uploads/2022/02/peugeot-9x8-1.jpg" class="d-block w-100" alt="9X8 Hypercar" />
+          <img
+            src="https://www.autohebdo.fr/app/uploads/2022/02/peugeot-9x8-1.jpg"
+            class="d-block w-100"
+            alt="9X8 Hypercar"
+          />
         </div>
         <div class="carousel-item">
           <img src="/img/499P.png" class="d-block w-100" alt="499P" />
         </div>
         <div class="carousel-item">
-          <img src="https://www.drivencarguide.co.nz/media/fhejypct/valkyrielmh3.jpg?rmode=max&width=941&height=529" class="d-block w-100" alt="Valkyrie" />
+          <img
+            src="https://www.drivencarguide.co.nz/media/fhejypct/valkyrielmh3.jpg?rmode=max&width=941&height=529"
+            class="d-block w-100"
+            alt="Valkyrie"
+          />
         </div>
       </div>
       <button
